gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__next.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 37
eol: None
diagnostics: 
-----------------
3..7      NEXT 
8..14     NEXT I
18..37    NEXT A, B b%, c, i

