gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__no_label.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).to_string(line)

---
label: None
len: 20
eol: None
diagnostics: 
  Error<0..20>: 缺少行号
-----------------
0..5      LET <ID: ab$> = <NUM: 3>
7..18     LET <ID: fO3 %> = (<NUM: 2> - (<NUM: 3> * <NUM: 1>))

