gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__no_stmts.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 2
eol: None
diagnostics: 
  Error<0..2>: 缺少语句
-----------------

