gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__open1.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 54
eol: None
diagnostics: 
-----------------
3..30     OPEN (<ID: A$> + <STR: ".dat">) FOR APPEND AS # (<ID: a> + <NUM: 1>)
33..54    OPEN <ID: b$> FOR INPUT AS # <NUM: 2>

