gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__open2.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 42
eol: None
diagnostics: 
-----------------
3..23     OPEN <ID: file$> FOR RANDOM AS # <NUM: 3>
24..42    OPEN <ID: f$> FOR OUTPUT AS # <NUM: 1>

