gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__open3.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).to_string(line)

---
label: Some(Label(10))
len: 30
eol: None
diagnostics: 
-----------------
3..30     OPEN <ID: P$> FOR INPUT AS # <NUM: 1> LEN = (<ID: k> * <NUM: 2>)

