gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__poke.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).to_string(line)

---
label: Some(Label(10))
len: 19
eol: None
diagnostics: 
-----------------
3..19     POKE a[<ID: i>], (<NUM: 30> + (<ID: I> * <NUM: 2>))

